name:                objc-runtime
version:             0.1.0.0
synopsis:            Haskell Interface to the Objective-C Runtime
description:         Haskell Interface to the Objective-C Runtime
homepage:            https://github.com/TravisWhitaker/objc-runtime
license:             MIT
license-file:        LICENSE
author:              Travis Whitaker
maintainer:          pi.boy.travis@gmail.com
Copyright:           Travis Whitaker 2018
category:            Language
build-type:          Simple
--extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     Language.ObjC.Class
                       Language.ObjC.MsgSend
                       Language.ObjC.NSObject
                       Language.ObjC.ObjCException
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.10 && <4.11
                     , template-haskell
  hs-source-dirs:      src
  default-language:    Haskell2010
  extra-libraries:     objc
  frameworks:          Foundation
